# FastAPI

./: emailassistant.db  gitignore  pyproject.toml  request.http
app/: routes.py
