[tool.poetry]
name = "flask-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
fastcrud = "^0.15.1"
sqlmodel = "^0.0.22"
openai = "^1.47.0"
aiosqlite = "^0.20.0"
greenlet = "^3.1.1"
python-jose = "^3.3.0"
bcrypt = "^4.2.0"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"
transformers = "^4.44.2"
torch = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
